--- a/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_pasajero.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_pasajero.xml
@@ -23,7 +23,7 @@
         android:layout_toStartOf="@+id/popup3" />
 
     <EditText
-        android:id="@+id/usuario_generado"
+        android:id="@+id/longitud_lugar_destino"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:layout_marginTop="19dp"
@@ -38,7 +38,7 @@
         android:layout_marginStart="34dp" />
 
     <EditText
-        android:id="@+id/contrasena_pasajero"
+        android:id="@+id/latitud_lugar_destino"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
@@ -49,13 +49,13 @@
         android:fontFamily="sans-serif"
         android:hint="@string/contrase_aChofer"
         android:inputType="textWebPassword"
-        android:layout_below="@+id/usuario_generado"
-        android:layout_alignStart="@+id/usuario_generado"
-        android:layout_alignEnd="@+id/usuario_generado" />
+        android:layout_below="@+id/longitud_lugar_destino"
+        android:layout_alignStart="@+id/longitud_lugar_destino"
+        android:layout_alignEnd="@+id/longitud_lugar_destino" />
 
 
     <EditText
-        android:id="@+id/nombre_pasajero"
+        android:id="@+id/longitud_lugar_encuentro"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
@@ -65,13 +65,13 @@
         android:ems="10"
         android:hint="@string/nombre"
         android:inputType="text"
-        android:layout_below="@+id/contrasena_pasajero"
-        android:layout_alignStart="@+id/contrasena_pasajero"
-        android:layout_alignEnd="@+id/contrasena_pasajero" />
+        android:layout_below="@+id/latitud_lugar_destino"
+        android:layout_alignStart="@+id/latitud_lugar_destino"
+        android:layout_alignEnd="@+id/latitud_lugar_destino" />
 
 
     <EditText
-        android:id="@+id/ap_pasajero"
+        android:id="@+id/latitud_lugar_encuentro"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
@@ -81,9 +81,9 @@
         android:ems="10"
         android:hint="@string/apellido_paterno"
         android:inputType="text"
-        android:layout_below="@+id/nombre_pasajero"
-        android:layout_alignStart="@+id/nombre_pasajero"
-        android:layout_alignEnd="@+id/nombre_pasajero" />
+        android:layout_below="@+id/longitud_lugar_encuentro"
+        android:layout_alignStart="@+id/longitud_lugar_encuentro"
+        android:layout_alignEnd="@+id/longitud_lugar_encuentro" />
 
     <EditText
         android:id="@+id/am_pasajero"
@@ -95,9 +95,9 @@
         android:ems="10"
         android:hint="@string/apellido_materno"
         android:inputType="text"
-        android:layout_alignBaseline="@+id/usuario_generado"
-        android:layout_alignBottom="@+id/usuario_generado"
-        android:layout_toEndOf="@+id/usuario_generado"
+        android:layout_alignBaseline="@+id/longitud_lugar_destino"
+        android:layout_alignBottom="@+id/longitud_lugar_destino"
+        android:layout_toEndOf="@+id/longitud_lugar_destino"
         android:layout_marginStart="25dp" />
 
     <EditText
@@ -137,8 +137,8 @@
         android:drawableLeft="@drawable/email_icon"
         android:drawablePadding="5dp"
         android:inputType="textEmailAddress"
-        android:layout_alignBaseline="@+id/nombre_pasajero"
-        android:layout_alignBottom="@+id/nombre_pasajero"
+        android:layout_alignBaseline="@+id/longitud_lugar_encuentro"
+        android:layout_alignBottom="@+id/longitud_lugar_encuentro"
         android:layout_alignStart="@+id/tel_pasajero" />
 
     <Button
@@ -150,7 +150,7 @@
         android:text="@string/aceptar"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
-        android:layout_alignTop="@+id/ap_pasajero"
+        android:layout_alignTop="@+id/latitud_lugar_encuentro"
         android:layout_alignStart="@+id/emailPasajero"
         android:layout_alignEnd="@+id/emailPasajero" />
 
