--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_asistente.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_asistente.xml
@@ -30,8 +30,10 @@
     <TextView
         android:id="@+id/textViewRC"
         android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
+        android:layout_height="60dp"
+        android:paddingTop="7dp"
+        android:layout_alignEnd="@+id/popup2"
+        android:layout_alignTop="@+id/imageView10"
         android:text="@string/capture_los_siguientes_datos"
         android:textAlignment="viewStart"
         android:textColor="?attr/actionMenuTextColor"
@@ -39,9 +41,7 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="134dp"
         tools:layout_editor_absoluteY="16dp"
-        android:layout_above="@+id/usuario_generadoA"
-        android:layout_alignEnd="@+id/popup2"
-        android:layout_marginBottom="9dp" />
+        />
 
     <EditText
         android:id="@+id/usuario_generadoA"
@@ -52,7 +52,7 @@
         android:drawableLeft="@drawable/user_icon"
         android:drawablePadding="5dp"
         android:ems="10"
-        android:hint="Nombre de usuario"
+        android:hint="@string/username"
         android:inputType="text"
         android:layout_below="@+id/imageView10"
         android:layout_alignStart="@+id/ap_asistente" />
@@ -149,7 +149,7 @@
         android:layout_width="255dp"
         android:layout_marginTop="10dp"
         android:layout_height="40dp"
-        android:hint="Correo electrónico"
+        android:hint="@string/email"
         android:ems="10"
         android:background="@drawable/border_style"
         android:drawableLeft="@drawable/email_icon"
