--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_chofer.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_chofer.xml
@@ -33,18 +33,17 @@
     <TextView
         android:id="@+id/textViewRC"
         android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
+        android:layout_height="60dp"
+        android:layout_alignEnd="@+id/popup"
+        android:layout_alignTop="@+id/imageView10"
+        android:paddingTop="7dp"
         android:text="@string/capture_los_siguientes_datos"
         android:textAlignment="viewStart"
         android:textColor="?attr/actionMenuTextColor"
         android:textSize="17sp"
         tools:ignore="MissingConstraints,RtlHardcoded"
         tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="16dp"
-        android:layout_above="@+id/numeroEmpleado"
-        android:layout_alignEnd="@+id/popup"
-        android:layout_marginBottom="9dp" />
+        tools:layout_editor_absoluteY="16dp" />
 
 
     <EditText
@@ -151,7 +150,7 @@
         android:layout_width="255dp"
         android:layout_marginTop="10dp"
         android:layout_height="40dp"
-        android:hint="Correo electrónico"
+        android:hint="@string/email"
         android:ems="10"
         android:background="@drawable/border_style"
         android:drawableLeft="@drawable/email_icon"
@@ -159,8 +158,7 @@
         android:inputType="textEmailAddress"
         android:layout_below="@+id/telefonoChofer"
         android:layout_alignStart="@+id/telefonoChofer"
-        android:layout_alignEnd="@+id/telefonoChofer"
-        tools:ignore="HardcodedText,RtlHardcoded" />
+        android:layout_alignEnd="@+id/telefonoChofer" />
 
 
     <!--TextView
