--- a/Transportaciones_CICESE/app/src/main/res/layout/content_inicio_asistentes.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/content_inicio_asistentes.xml
@@ -1,89 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#ffff"
-    xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/cicesenoche"
-        android:id="@+id/imageView15" />
-
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="57dp"
-        android:text="Bienvenido"
-        android:textColor="#ffff"
-        android:textSize="40dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView28"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView12"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
-        android:text="a Transportaciones CICESE"
-        android:textColor="#ffff"
-        android:textSize="20dp"
-        />
-
-    <ImageView
-        android:id="@+id/imageView14"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageView15"
-        app:srcCompat="@drawable/tercer_button_style"/>
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.transporte.cicese.transportaciones_cicese.InicioChoferesActivity"
+        tools:showIn="@layout/app_bar_inicio_choferes">
+        <ImageView
+            android:id="@+id/imageView10"
+            android:layout_width="300dp"
+            android:layout_height="70dp"
+            app:srcCompat="@drawable/textback"
+            android:layout_marginTop="12dp"
+            tools:ignore="ContentDescription"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:paddingTop="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_below="@+id/imageView15"
-        android:layout_centerHorizontal="true"
-        android:text="La aplicación oficial del Centro de Investigación Científica y de Educación Superior  de Ensenada,  Baja California, de transporte a usuarios invitados."
-        android:textAlignment="inherit"
-        android:textColor="@color/colorAccent"/>
+        <TextView
+            android:id="@+id/textView23"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bienvenido"
+            android:textAlignment="center"
+            android:textColor="@color/ColorActionBarTitle"
+            android:textSize="20dp"
+            android:layout_marginTop="11dp"
+            android:layout_alignTop="@+id/imageView10"
+            android:layout_alignEnd="@+id/imageView10"
+            android:layout_toEndOf="@+id/imageView12" />
 
-    <RelativeLayout
-        android:id="@+id/relativeServicio"
-        android:layout_width="match_parent"
-        android:layout_height="900dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageView14"
-        android:orientation="vertical">
+
+        <ViewFlipper
+            android:id="@+id/flipper1"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/imageView10"
+            android:layout_marginTop="22dp"
+            android:autoStart="true"
+            android:flipInterval="3000"
+            android:inAnimation="@android:anim/slide_in_left"
+            android:outAnimation="@android:anim/slide_out_right"
+            tools:ignore="UselessLeaf,UselessParent">
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/logocicese"
+                tools:ignore="ContentDescription" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/instalaciones"
+                tools:ignore="ContentDescription" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/fondocicese"
+                tools:ignore="ContentDescription" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ensenada"
+                tools:ignore="ContentDescription" />
+
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/mapa"
+                tools:ignore="ContentDescription" />
+
+        </ViewFlipper>
+
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="Como asistente, a través de esta aplicación usted podrá:"
-            android:textAlignment="inherit"
+            android:layout_alignEnd="@+id/imageView10"
+
+            android:layout_alignStart="@+id/imageView10"
+            android:layout_below="@+id/flipper1"
+            android:layout_marginTop="24dp"
+            android:text="@string/como_asistente"
+            android:textAlignment="center"
             android:textColor="@android:color/holo_blue_light"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:layout_marginTop="15dp"
-            tools:ignore="HardcodedText" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView2"
@@ -92,8 +105,6 @@
             android:layout_alignStart="@+id/textView13"
             android:drawableLeft="@drawable/forma_iconp"
             android:drawablePadding="5dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
             android:layout_below="@+id/textView9"
             android:layout_marginTop="11dp"
             android:text="@string/registar_usuarios_y_solicitudes"
@@ -107,11 +118,9 @@
             android:layout_alignStart="@+id/textView9"
             android:drawableLeft="@drawable/forma_iconp"
             android:drawablePadding="5dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
             android:layout_below="@+id/textView2"
             android:layout_marginTop="2dp"
-            android:text="Intercambiar mensajes con los usuarios asociados a un servicio"
+            android:text="@string/int_msj_d"
             tools:ignore="HardcodedText,RtlHardcoded" />
 
         <TextView
@@ -122,11 +131,8 @@
             android:layout_below="@+id/textView13"
             android:drawableLeft="@drawable/forma_iconp"
             android:drawablePadding="5dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
             android:layout_marginTop="2dp"
-            android:text="Actualizar los datos de los servicios registrados"
-            tools:ignore="HardcodedText,RtlHardcoded"
+            android:text="@string/update_service"
             android:layout_alignEnd="@+id/textView13" />
 
         <TextView
@@ -138,19 +144,15 @@
             android:layout_marginTop="2dp"
             android:drawableLeft="@drawable/forma_iconp"
             android:drawablePadding="5dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="Realizar consultas a los servicios registrados"
-            tools:ignore="HardcodedText,RtlHardcoded"
+            android:text="@string/consultas_info"
             android:layout_alignEnd="@+id/textView14" />
 
         <TextView
             android:id="@+id/textView24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Para mayor información, favor de consultar la ayuda"
+            android:text="@string/mayor_info"
             android:textSize="10sp"
-            tools:ignore="HardcodedText,SmallSp,SpUsage"
             android:layout_marginTop="15dp"
             android:layout_below="@+id/textView15"
             android:layout_centerHorizontal="true" />
@@ -164,4 +166,3 @@
             tools:ignore="ContentDescription,UnusedAttribute" />
 
     </RelativeLayout>
-</RelativeLayout>
