--- a/Transportaciones_CICESE/app/src/main/res/menu/inicio_pasajero.xml
+++ b/Transportaciones_CICESE/app/src/main/res/menu/inicio_pasajero.xml
@@ -6,6 +6,5 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="Settings"
-        tools:ignore="HardcodedText" />
+        android:title="@string/action_settings"/>
 </menu>
